Leads + Painel on progress

--- a/elogroup-app/src/app/painel/painel.component.html
+++ b/elogroup-app/src/app/painel/painel.component.html
@@ -1,1 +1,14 @@
-<p>painel works!</p>
+<div class="d-flex">
+    <img src="../../assets/elogroup.png" class="img-fluid p-2" alt="elogroup-logo">
+    <div>
+        <br>
+        <h3 class="p-2">Painel de Leads</h3> 
+    </div>
+</div>
+<br>
+
+<button type="button" class="btn btn-primary">Novo Lead (+)</button>
+
+<br><br>
+
+<app-lead-table></app-lead-table>
