--- a/elogroup-app/src/app/painel/painel.component.html
+++ b/elogroup-app/src/app/painel/painel.component.html
@@ -7,7 +7,7 @@
 </div>
 <br>
 
-<button type="button" class="btn btn-primary">Novo Lead (+)</button>
+<button type="button" class="btn btn-primary" (click)="openDialog()">Novo Lead (+)</button>
 
 <br><br>
 
