--- a/elogroup-app/src/app/signin/signin.component.html
+++ b/elogroup-app/src/app/signin/signin.component.html
@@ -12,20 +12,20 @@
         <small
             *ngIf="loginForm.get('userName').errors?.required"
             class="text-danger d-block mt-2">
-            User name is required!
+            O nome de usuário é obrigatório!
         </small>
     </div>
 
     <div class="form-group">
         <input
-        formControlName="password"
+            formControlName="password"
             type="password" 
             class="form-control" 
             placeholder="password">
         <small
             *ngIf="loginForm.get('password').errors?.required"
             class="text-danger d-block mt-2">
-            Password is required!
+            A senha é obrigatória!
         </small>             
     </div>
 
